bug-sheet-1.1 fix alignment full media query

--- a/client/src/components/molecule/footer/index.css
+++ b/client/src/components/molecule/footer/index.css
@@ -28,11 +28,11 @@
     line-height: 20px;
 }
 .footer__inner__top__left{
-    width:70%;
+    width:80%;
     height:fit-content;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: flex-start;
 }
 .footer__inner__top__right{
     width:20%;
@@ -43,7 +43,9 @@
 }
 .footer__inner__top__left__each{
     width:fit-content;
-    padding:2px 10px 2px 10px;
+    padding:2px 10px 2px 0px;
+    margin-right: 15px;
+    margin-left: 10px;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -62,12 +64,17 @@
     justify-content: space-around;
     cursor: pointer;
 }
+.icon__test__col:hover{
+    color:orange;
+}
 .footer__inner__top__left__each3{
     width:fit-content;
     display: flex;
-    padding:2px 10px 2px 10px;
+    padding:2px 10px 2px 0px;
+    margin-left: 10px;
+    margin-right: 15px;
     align-items: center;
-    justify-content: space-around;
+    justify-content: flex-start;
     cursor: pointer;
 }
 
@@ -85,19 +92,19 @@
     height:fit-content;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
-    margin-left: 1.25rem;
+    margin-left: 10px;
 }
 .footer__inner__bottom{
     margin-bottom: 1rem;
     margin-top: 1rem;
     width:fit-content;
-    padding:2px 10px 2px 10px;
+    padding:2px 10px 2px 0px;
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -123,11 +130,7 @@
 @media screen and (min-width:2000px)
 {
     .footer__inner__top__left{
-        width:70rem;
-    }
-    .footer__inner__top__right{
-        width:22rem;
-
+        width:60%;
     }
 }
 
@@ -149,10 +152,14 @@
     .footer__inner__top__left{
         width:75%;
         flex-wrap: wrap;
+        height: fit-content;
     }
     .footer__inner__top__right{
         width:20%;
 
+    }
+    .footer__inner__top__left__each{
+        margin-top: 5px;
     }
 }
 @media screen and (max-width:1264px)
